# Lotus

./: .clang-format  .gitignore  .vimrc  CMakeCache.txt  CMakeLists.txt  LICENSE  Lotus  Makefile  autobuild.sh  build.sh  build_and_run.sh  clean.sh  cmake_install.cmake  git_commit_and_push.sh  rebuild.sh  rebuild_and_run.sh  run
LotusEngine/: CMakeLists.txt
LotusEngine/LotusEngine.xcodeproj/: project.pbxproj
LotusEngine/LotusEngine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
LotusEngine/LotusEngine.xcodeproj/project.xcworkspace/xcshareddata/: LotusEngine.xccheckout
LotusEngine/ext/include/stb/: stb_image.c
LotusEngine/ext/lib/: libGLEW.1.12.0.dylib
LotusEngine/res/shaders/: forward3d_main_fs.glsl  lighting.glsl  sprite2d_fs.glsl  sprite2d_vs.glsl
LotusEngine/shaders/: forward_ambient-frag.glsl  forward_directional-frag.glsl  forward_main-frag.glsl  forward_point-frag.glsl  forward_shared-frag.glsl  forward_shared-vert.glsl  forward_spot-frag.glsl  lighting.glsl  phong-frag.glsl  simple-frag.glsl  simple-vert.glsl
LotusEngine/src/: lotus.hpp  lotus_camera.cpp  lotus_entity.cpp  lotus_entity.hpp  lotus_entitycomponent.hpp  lotus_forwardambient.cpp  lotus_forwardambient.hpp  lotus_forwardrenderer3d.cpp  lotus_forwardspot.hpp  lotus_freelook.hpp  lotus_freemove.hpp  lotus_igame.hpp  lotus_indexedmodel.cpp  lotus_indexedmodel.hpp  lotus_input.hpp  lotus_irenderablecomponent.hpp  lotus_irenderer.hpp  lotus_layer.cpp  lotus_layer.hpp  lotus_lighting.hpp  lotus_mat4.hpp  lotus_meshcomponent.cpp  lotus_meshcomponent.hpp  lotus_phongrenderer3d.cpp  lotus_phongrenderer3d.hpp  lotus_phongshader.cpp  lotus_quat.cpp  lotus_quat.hpp  lotus_renderablecomponent.cpp  lotus_shader.cpp  lotus_simplerenderer3d.cpp  lotus_simplerenderer3d.hpp  lotus_simpleshader.cpp  lotus_transform.hpp  lotus_vec4.cpp  lotus_window.cpp
LotusEngine/src/components/: freelook.cpp  freelook.hpp  freemove.cpp  freemove.hpp  lotus_freelook.cpp  lotus_freemove.cpp  lotus_renderablecomponent.cpp  renderablecomponent.cpp  renderablecomponent.hpp  spritecomponent.cpp  spritecomponent.hpp  watercomponent.cpp  watercomponent.hpp
LotusEngine/src/core/: engine.cpp  engine.hpp  entity.cpp  entity.hpp  entitycomponent.hpp  id.hpp  igame.hpp  input.cpp  input.hpp  lotus_engine.cpp  lotus_engine.hpp  lotus_entity.hpp  lotus_entitycomponent.hpp  lotus_input.cpp  maths.hpp  profiling.cpp  profiling.hpp  resourcemanagement.cpp  resourcemanagement.hpp  stringfunc.cpp  stringfunc.hpp  time.hpp  transform.cpp  transform.hpp
LotusEngine/src/core/entity/: entity.cpp  entity.hpp  scenegraph.cpp  scenegraph.hpp
LotusEngine/src/core/graphics/: lotus_forwarddirectional.cpp  lotus_forwarddirectional.hpp  lotus_forwardpoint.cpp  lotus_forwardrenderer3d.cpp  lotus_forwardspot.cpp  lotus_indexedmodel.hpp  lotus_lighting.cpp  lotus_material.cpp
LotusEngine/src/core/memory/: heapallocator.cpp
LotusEngine/src/core/utils/: lotus_stringutils.cpp  lotus_stringutils.hpp
LotusEngine/src/entity/: lotus_entity.cpp  lotus_transform.cpp  lotus_transform.hpp
LotusEngine/src/graphics/: camera.cpp  camera.hpp  indexedmodel.cpp  indexedmodel.hpp  lighting.cpp  lighting.hpp  lotus_forwardambient.cpp  lotus_forwardambient.hpp  lotus_forwarddirectional.cpp  lotus_forwarddirectional.hpp  lotus_forwardpoint.cpp  lotus_forwardpoint.hpp  lotus_forwardrenderer3d.cpp  lotus_forwardrenderer3d.hpp  lotus_forwardspot.cpp  lotus_forwardspot.hpp  lotus_lighting.cpp  lotus_lighting.hpp  lotus_material.cpp  lotus_material.hpp  lotus_objloader.cpp  lotus_phongrenderer3d.cpp  lotus_phongshader.cpp  lotus_phongshader.hpp  lotus_renderable.cpp  lotus_renderable.hpp  lotus_scene.cpp  lotus_scene.hpp  lotus_shader.cpp  lotus_shader.hpp  lotus_shaderfactory.cpp  lotus_shaderfactory.hpp  lotus_shadersources.hpp  lotus_simplerenderer3d.cpp  lotus_simpleshader.cpp  lotus_simpleshader.hpp  lotus_texture.cpp  lotus_uniform.cpp  lotus_uniform.hpp  lotus_vertex.hpp  (+21 more)
LotusEngine/src/graphics/renderers/: batchrenderer2d.cpp  batchrenderer2d.hpp  forwardrenderer.cpp  forwardrenderer.hpp  forwardrenderer3d.cpp  forwardrenderer3d.hpp  irenderer.hpp  simplerenderer.cpp  simplerenderer.hpp  simplerenderer3d.cpp  simplerenderer3d.hpp  spriterenderer.cpp  spriterenderer.hpp  spriterenderer2d.cpp  spriterenderer2d.hpp  waterrenderer.cpp  waterrenderer.hpp
LotusEngine/src/graphics/shaders/: shader.cpp  shader.hpp  shaderfactory.cpp  shaderfactory.hpp  shadersources.hpp  (+2 more)
LotusEngine/src/maths/: functions.hpp  functions.inl  mat4.cpp  mat4.hpp  maths.hpp  mathsfunc.hpp  matrix.cpp  matrix.hpp  matrix.inl  quat.cpp  quat.hpp  quaternion.cpp  quaternion.hpp  quaternion.inl  types.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp  vector.cpp  vector.hpp  vector.inl
LotusEngine/src/memory/: heapallocator.hpp  iallocator.hpp  memory.hpp
LotusEngine/src/scene/: node.cpp  node.hpp  nodecomponent.cpp  nodecomponent.hpp
LotusEngine/src/utils/: lotus_fileutils.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
(+222 files in other folders)
